se integra landing page, se integra historial de tokens en mobile
